调整插件列表为不可见